# phonikud-stress-data-gen

./: .gitignore  README.md  pyproject.toml
code/src/: add_diacritics.py  config.py  create_stressed_sentences.py  create_top_stressed.py
data/: 200_sentences_v1.txt  200_sentences_v1_hand.txt  200_stressed_v1.txt  top_stressed.txt
